syntax = "proto3";

option csharp_namespace = "CarLicensePlate.Server";

package CarLicensePlate;

// The CarLicensePlate service definition.
service CarLicensePlate {
  // Request Info to a car license plate
  rpc GetCarLicensePlateInfo (CarLicensePlateRequest) returns (CarLicensePlateResponse);
}

// The request message containing the car license plate
message CarLicensePlateRequest {
  string licensePlate = 1;
}

// The response message containing the car license plate info.
message CarLicensePlateResponse {
  string licensePlate = 1;
  string cityRegion = 2;
  string derivedFrom = 3;
  string county = 4;
}
